--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -1,34 +1,52 @@
 <!DOCTYPE HTML>
 <html xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	  xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Your first Spring application</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<title>Your first Spring application</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
 <body>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <header id="header">
-  <div th:insert="~{navbar :: navbar}"></div>
+	<div th:insert="~{fragments/navbar :: navbar}"></div>
 </header>
 
 <div id="main">
-  <div id="content">
-    
-    <h1>These are all of your approved classes!</h1>
-    
-    <div th:each="course : ${courses}">
-      <div th:text="${course.getCode()}"></div>
-    </div>
-    
-  </div>
-  
-  <footer>This is some footer text</footer>
-  
+	<div id="content">
+		
+		<div sec:authorize="isAuthenticated()">
+			<h1>
+				These are all of <span sec:authentication="principal.username"></span>'s approved classes!
+			</h1>
+		</div>
+		
+		
+		<div th:each="course : ${allApprovedCourses}" class="course-container">
+			<div class="course-icon" style="background-color: green">
+				<span class="material-icons">done</span>
+			</div>
+			<span th:text="${course.getCode()}" class="course-code"></span>
+			<span th:text="${course.getTitle()}" class="course-name"></span>
+		</div>
+		
+		<div th:each="course : ${remainingCoursesInMajor}" class="course-container">
+			<div class="course-icon" style="background-color: red">
+				<span class="material-icons">close</span>
+			</div>
+			
+			<span th:text="${course.getCode()}" class="course-code"></span>
+			<span th:text="${course.getTitle()}" class="course-name"></span>
+		</div>
+	</div>
+	
+	<footer>This is some footer text</footer>
+
 </div>
 
 </body>
