--- a/src/main/resources/templates/emailstatus.html
+++ b/src/main/resources/templates/emailstatus.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <header id="header">
-	<div th:insert="~{navbar :: navbar}">  </div>
+	<div th:insert="~{fragments/navbar :: navbar}"></div>
 </header>
 
 <div id="main">
