--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <header id="header">
-            <div th:insert="~{navbar :: navbar}"></div>
+            <div th:insert="~{fragments/navbar :: navbar}"></div>
         </header>
 
     <div id="main">
