--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -95,7 +95,7 @@
                 </a>
             </div>
 
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
+            <p>It is a long-established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
 
             <form id="form" action="">
                 <label for="studentId">Enter your student ID to register!</label>
@@ -107,8 +107,8 @@
                 <input id="submit" type="submit" value="Register!">
             </form>
         </div>
-
-        <footer>This is some footer text</footer>
+		
+		<footer th:insert="~{fragments/footer :: footer}"></footer>
     </div>
 
     </body>
