--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -25,6 +25,10 @@ body {
 
 #header {
 	/*background-color: var(--backgroundColor);*/
+	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/inter-bayamon-background.png");
+	background-position: center;
+	background-attachment: fixed;
+	background-size: cover;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -38,6 +42,7 @@ body {
 		align-items: center;
 		margin: 0 10% 0 10%;
 		border-bottom: 1px solid #EFCA08;
+		box-shadow: 0 10px 6px -6px #222;
 	}
 
 		#nav-bar img {
@@ -224,6 +229,7 @@ body {
 
 	footer {
 		background-color: lightgrey;
+		color: black;
 		font-size: 20px;
 		font-weight: bold;
 		margin: 0;
