--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-  <title>Your first Spring application</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<title>Error</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
 <body>
@@ -15,9 +15,9 @@
 </header>
 
 <div id="main">
-  <div id="content">
-    <h1>Oops! Something broke :c</h1>
-  </div>
+	<div id="content">
+		<h1>Oops! Something broke :c</h1>
+	</div>
 </div>
 
 </body>
