--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,9 +22,10 @@
         <input type="password" id="password" name="password" placeholder="Password" required>
 
         <button type="submit">Log In</button>
-<!--        <button type="button">Forgor password</button>-->
         
         <a href="/auth/register">New? Register here!</a>
+		<br>
+		<a href="/auth/resetRequest">Forgot password? Reset here!</a>
     </form>
 </body>
 </html>
