--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -20,7 +20,7 @@
 	<label for="confirmPassword"></label>
 	<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
 	
-	<button type="button" onclick="validateResetForm()">Reset</button>
+	<button id="resetButton" type="button" onclick="validateResetForm()">Reset</button>
 	
 	<script>
 		function validateResetForm()
@@ -56,12 +56,16 @@
 		
 		async function resetPassword(token, password)
 		{
-			let request = {
+			disableButton();
+			
+			let request =
+			{
 				token: token,
 				password: password
 			}
 			
-			try {
+			try
+			{
 				const response = await fetch
 				(
 						"http://localhost:8080/auth/resetPassword",
@@ -78,6 +82,7 @@
 			catch (error)
 			{
 				console.error("Error:", error);
+				enableButton();
 				return "No student found with provided ID!";
 			}
 		}
@@ -85,6 +90,20 @@
 		function matchesRegex(string, regex)
 		{
 			return regex.test(string);
+		}
+		
+		function enableButton()
+		{
+			let button = document.getElementById("resetButton");
+			button.disabled = false;
+			button.innerText = "Get password reset email";
+		}
+		
+		function disableButton()
+		{
+			let button = document.getElementById("resetButton");
+			button.disabled = true;
+			button.innerText = "...";
 		}
 	</script>
 </form>
