--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -28,35 +28,56 @@
 		
 		<div style="display: flex; flex-direction: row; justify-content: center">
 			<div>
+				<h2>Approved courses</h2>
 				<div th:each="course : ${allApprovedCourses}" class="course-container">
 					<div class="course-icon" style="background-color: green">
 						<span class="material-icons">done</span>
 					</div>
-					<span th:text="${course.getCode()}" class="course-code"></span>
-					<span th:text="${course.getTitle()}" class="course-name"></span>
+					<div>
+						<div th:text="${course.getCode()}" class="course-code"></div>
+						<div th:text="${course.getTitle()}" class="course-name"></div>
+					</div>
+					<span th:text="${course.getCreditCount()}" class="course-credit"></span>
 				</div>
 			</div>
 			
 			<div>
+				<h2>Remaining courses</h2>
 				<div th:each="course : ${remainingCoursesInMajor}" class="course-container">
 					<div class="course-icon" style="background-color: red">
 						<span class="material-icons">close</span>
 					</div>
-					
-					<span th:text="${course.getCode()}" class="course-code"></span>
-					<span th:text="${course.getTitle()}" class="course-name"></span>
+					<div>
+						<div th:text="${course.getCode()}" class="course-code"></div>
+						<div th:text="${course.getTitle()}" class="course-name"></div>
+					</div>
+					<span th:text="${course.getCreditCount()}" class="course-credit"></span>
 				</div>
 			</div>
 			
 			<div>
+				<h2>Distributive courses</h2>
+				<div th:each="course : ${approvedDistributiveCourses}" class="course-container">
+					<div class="course-icon" style="background-color: green">
+						<span class="material-icons">done</span>
+					</div>
+					<div>
+						<div th:text="${course.getCode()}" class="course-code"></div>
+						<div th:text="${course.getTitle()}" class="course-name"></div>
+					</div>
+					<span th:text="${course.getCreditCount()}" class="course-credit"></span>
+				</div>
 				<div th:each="course : ${remainingDistributiveCourses}" class="course-container">
 					<div class="course-icon" style="background-color: red">
 						<span class="material-icons">close</span>
 					</div>
-					
-					<span th:text="${course.getCode()}" class="course-code"></span>
-					<span th:text="${course.getTitle()}" class="course-name"></span>
+					<div>
+						<div th:text="${course.getCode()}" class="course-code"></div>
+						<div th:text="${course.getTitle()}" class="course-name"></div>
+					</div>
+					<span th:text="${course.getCreditCount()}" class="course-credit"></span>
 				</div>
+				<p>You need to approve a total of two (2) distributive requirement courses</p>
 			</div>
 		</div>
 		
