--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-  <title>Email Confirmation</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<title>Email Confirmation</title>
+	<link rel="icon" href="/images/inter-logo.png">
 </head>
 
 <body>
@@ -15,12 +16,12 @@
 </header>
 
 <div id="main">
-  <div id="content">
-    <h1>Email Confirmed!</h1>
-    <p>
-      Your email has been confirmed and your account has been enabled. You can now log in!.
-    </p>
-  </div>
+	<div id="content">
+		<h1>Email Confirmed!</h1>
+		<p>
+			Your email has been confirmed and your account has been enabled. You can now log in!.
+		</p>
+	</div>
 </div>
 
 </body>
