--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-	<title>Error</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<title>Error</title>
+	<link rel="icon" href="/images/inter-logo.png">
 </head>
 
 <body>
