--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,10 +3,11 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Your first Spring application</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
+		<title>Your first Spring application</title>
+		<link rel="icon" href="/images/inter-logo.png">
     </head>
 
     <body>
