--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../static/style/formstyle.css" />
     <script type="text/javascript" th:src="@{/script/script.js}"></script>
     <title>Register</title>
+	<link rel="icon" href="/images/inter-logo.png">
 </head>
 <body>
     <form class="login-form" method="post" action="">
