--- a/src/main/resources/templates/resetRequest.html
+++ b/src/main/resources/templates/resetRequest.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />
 	<link rel="stylesheet" type="text/css" href="../static/style/formstyle.css" />
 	<title>Reset your password</title>
+	<link rel="icon" href="/images/inter-logo.png">
 </head>
 <body>
 <form class="login-form" method="post" action="">
