--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -230,8 +230,8 @@ body {
 	footer {
 		background-color: lightgrey;
 		color: black;
-		font-size: 20px;
+		font-size: 16px;
 		font-weight: bold;
-		margin: 0;
-		padding: 2vw 0 2vw 0;
+		margin: 30px 0 0 0;
+		padding: 30px;
 	}
